--- a/frontend-angular/src/app/home/home.component.html
+++ b/frontend-angular/src/app/home/home.component.html
@@ -1,7 +1,24 @@
-<!-- src/app/home/home.component.html -->
-<div class="container mt-4">
-  <h1>Welcome to Our Application!</h1>
-  <p>This is the home page of your application. You're successfully logged in!</p>
-
-  <!-- You can add more content here as per your application's need -->
+<div class="container">
+  <div class="row">
+    <div class="col-md-6">
+      <!-- Pie Chart -->
+      <highcharts-chart
+              [Highcharts]="Highcharts"
+              [options]="chartOptions"
+              style="width: 100%; height: 400px; display: block;">
+      </highcharts-chart>
+    </div>
+    <div class="col-md-6">
+      <!-- Flashcard Information -->
+      <h3>Flashcard Statistics</h3>
+      <p>Total Flashcards: {{ totalFlashcards }}</p>
+      <p>Known Flashcards: {{ knownFlashcards }}</p>
+    </div>
+  </div>
+  <div class="row mt-4">
+    <div class="col">
+      <!-- Button to Create Flashcard -->
+      <button class="btn btn-primary" routerLink="/create-flashcard">Create Flashcard</button>
+    </div>
+  </div>
 </div>
