feat:adding ag-grid linked with the button manage flashcards + its buttons for viewing , mark as known , modify and delete one flashcards;feat:update navbar , now the user connected can see is username near logout button

--- a/frontend-angular/src/app/home/home.component.html
+++ b/frontend-angular/src/app/home/home.component.html
@@ -19,6 +19,7 @@
     <div class="col">
       <!-- Button to Create Flashcard -->
       <button class="btn btn-primary" routerLink="/create-flashcard">Create Flashcard</button>
+      <button class="btn btn-success mx-1" routerLink="/manage-flashcards">Manage Flashcards</button>
     </div>
   </div>
 </div>
