--- a/frontend-angular/src/app/login/login.component.html
+++ b/frontend-angular/src/app/login/login.component.html
@@ -12,4 +12,44 @@
     </div>
     <button type="submit" class="btn btn-primary">Login</button>
   </form>
+
+  <h3>Creating and learning flashcards has never been easier.</h3>
+  <p>Create your own set of flashcards is simple with our free flashcard maker !
+    You just have to add a question and its answer. You can even class them in different categories !
+    Once your flashcard set is complete, you can study and share it with friends.
+    </p>
+  <div class="dialog-box">
+    <p>
+      Culture Time &nbsp;&nbsp;
+      <i>Did you know it ? Flashcards were invented by Favell Lee Mortimer in 1834!</i>
+    </p>
+  </div>
 </div>
+
+<style>
+
+h3{
+  margin-top: 5%;
+  font-size: 2.5rem;
+}
+
+p{
+  font-size: 1.2rem;
+}
+
+.dialog-box{
+  background-color: #0d6efd;
+  padding: 1.5% 1.5% 1.5% 1.5%;
+  border-radius: 50px;
+  margin: auto;
+  margin-top: 10%;
+  width: 70%;
+}
+
+.dialog-box p , .dialog-box i {
+  color: white;
+  font-size: 1.2rem;
+  text-align: center;
+}
+
+</style>
