footer legal section

--- a/frontend-angular/src/app/footer/footer.component.html
+++ b/frontend-angular/src/app/footer/footer.component.html
@@ -1,5 +1,18 @@
 <!-- src/app/footer/footer.component.html -->
 <footer class="footer bg-light text-center text-lg-start">
+
+<!-- Footer legal section -->
+
+  <div class="legal">
+    <ul>
+      <li>Mentions Légales</li>
+      <li>Politique de Confidentialité</li>
+      <li>Conditions Générales d'Utilisation</li>
+    </ul>
+  </div>
+
+<!-- Copyrighht section -->
+
   <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
     © 2023 One Piece Tools Company
     <a class="text-dark" href="https://youtu.be/zzTV3exIJ98">onepiecetools.com</a>
