--- a/frontend-angular/src/app/footer/footer.component.html
+++ b/frontend-angular/src/app/footer/footer.component.html
@@ -5,9 +5,9 @@
 
   <div class="legal">
     <ul>
-      <li>Mentions Légales</li>
-      <li>Politique de Confidentialité</li>
-      <li>Conditions Générales d'Utilisation</li>
+      <li>Terms of use</li>
+      <li>Privacy Policy</li>
+      <li>Terms and conditions of use</li>
     </ul>
   </div>
 
